Added the changes to models.py, utils.py, and templates/amdevice_list.html

--- a/zapd/templates/amdevice_list.html
+++ b/zapd/templates/amdevice_list.html
@@ -5,3 +5,8 @@
     <a href="multiple_devices" title="Show With Multiple Devices">Show With Multiple Devices</a>
 </li>
 {% endblock %}
+{% block model_menu_bar_after_filters %}
+<li>
+    <a href="" title="Update Address List">Update Address List</a>
+</li>
+{% endblock %}
