Changed the template

--- a/zapd/templates/amdevice_list.html
+++ b/zapd/templates/amdevice_list.html
@@ -4,9 +4,7 @@
 <li>
     <a href="multiple_devices" title="Show With Multiple Devices">Show With Multiple Devices</a>
 </li>
-{% endblock %}
-{% block model_menu_bar_after_filters %}
 <li>
-    <a href="" title="Update Address List">Update Address List</a>
+    <a href="" title="Update Address List">Update</a>
 </li>
 {% endblock %}
