cleaned up wallet addresses initialization  - added error handling  - only can initialize addressess on first install  - fixed endpoint links/names

--- a/zapd/templates/amdevice_list.html
+++ b/zapd/templates/amdevice_list.html
@@ -5,6 +5,6 @@
     <a href="multiple_devices" title="Show With Multiple Devices">Show With Multiple Devices</a>
 </li>
 <li>
-    <a href="" title="Update Address List">Update</a>
+    <a href="initialize_address_list" title="Initialize Address List">Initialize Address List</a>
 </li>
 {% endblock %}
