--- a/zapd/templates/multiple_devices.html
+++ b/zapd/templates/multiple_devices.html
@@ -7,7 +7,21 @@ table, th, td {
 }
 </style>
 
+<p id="poc_demo"></p>
+
 <script>
+function myFunction(deviceID, CreatedDate, deviceOS) {
+  var msg;
+  var reply = prompt("Please enter reason for resolving: ", "");
+  if (reply == null || reply == "") {
+    msg = "User provided no explanation. Cancelling request for id: '" + deviceID + "'";
+  } else {
+	  msg = "Created Date "+ CreatedDate + " device os is " + deviceOS + " Reason for resolving device " + deviceID + " is: '"+ reply + "'";
+
+  }
+  document.getElementById("poc_demo").innerHTML = msg;
+}
+
 </script>
 
 {% for wallet in wallets %}
@@ -16,6 +30,7 @@ table, th, td {
     <ul>
 	<table>
 	  <tr>
+	    <th> id </th>
             <th> Created Date </th>
 	    <th> Device OS </th>
 	    <th> Device OS Version </th>
@@ -26,6 +41,7 @@ table, th, td {
 	  </tr>
           {% for device in wallet.devices %}
           <tr>
+            <td>{{device.id}}</td>
             <td>{{device.date}}</td>
             <td>{{device.os}}</td>
 	    <td>{{device.os_version}}</td>
@@ -33,7 +49,7 @@ table, th, td {
             <td>{{device.brand}}</td>
             <td>{{device.device_id}}</td>
             <td>{{device.app_version}}</td>
-	    <td><button type="button" onclick="alert('TODO. Still need to figure out what to do from here. The AMDevice id for this line is {{ device.id }}')">Resolve</button></td>
+	    <td><button type="button" onclick="myFunction('{{device.id}}','{{device.date}}','{{device.os}}')">Resolution</button></td>
 	  </tr>
           {% endfor %}
 	</table>
