--- a/zapd/templates/multiple_devices.html
+++ b/zapd/templates/multiple_devices.html
@@ -1,53 +1,12 @@
 {% extends 'admin/master.html' %}
 
 {% block body %}
-<style>
-table, th, td {
-  border: 2px solid black;
-}
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-</style>
-
-<p id="poc_demo"></p>
-
-<script>
-function myFunction(deviceID, CreatedDate, deviceOS) {
-  var msg;
-  var reply = prompt("Please enter reason for resolving: ", "");
-  if (reply == null || reply == "") {
-    msg = "User provided no explanation. Cancelling request for id: '" + deviceID + "'";
-  } else {
-	  msg = "Created Date "+ CreatedDate + " device os is " + deviceOS + " Reason for resolving device " + deviceID + " is: '"+ reply + "'";
-  }
-  document.getElementById("poc_demo").innerHTML = msg;
-}
-
-function submit_form() {
-  document.getElementById("myForm").submit();
-}
-
-function openForm(deviceid, CreatedDate, deviceOS) {
-	  document.getElementById("myForm").style.display = "block";
-}
-
-function closeForm() {
-	  document.getElementById("myForm").style.display = "none";
-}
-</script>
 
 {% for wallet in wallets %}
 <div class="col-lg-12">
     <strong>Address: {{wallet.address}}</strong>
     <ul>
-        <table>
+        <table class="table table-striped table-bordered table-hover model-list">
             <tr>
                 <th> id </th>
                 <th> Created Date </th>
@@ -68,48 +27,26 @@ function closeForm() {
                 <td>{{device.brand}}</td>
                 <td>{{device.device_id}}</td>
                 <td>{{device.app_version}}</td>
+                {% if not device.device_resolution %}
                 <td>
-                    <button type="button" onclick="myFunction('{{device.id}}','{{device.date}}','{{device.os}}')">Resolution</button>
-                </td>
-    	        <td>
-    	            <button class="open-button" onclick="openForm('{{device.id}}','{{device.date}}','{{device.os}}')">Resolution2</button>
-    	        </td>
-                <td>
-                  <form action="/testing" method="POST">
-	            <input type="hidden" placeholder="ID" id="ID" name="ID" value='{{device.id}}'>
-	            <input type="hidden" placeholder="CreatedDate" id="CreatedDate" name="CreatedDate" value='{{device.date}}'>
-	            <input type="hidden" placeholder="DeviceOS" id="DeviceOS" name="DeviceOS" value='{{device.os}}'>
-	            <input type="hidden" placeholder="OSVersion" id="OSVersion" name="OSVersion" value='{{device.os_version}}'>
-	            <input type="hidden" placeholder="DeviceManufacturer" id="DeviceManufacturer" name="DeviceManufacturer" value='{{device.manufacturer}}'>
-	            <input type="hidden" placeholder="DeviceBrand" id="DeviceBrand" name="DeviceBrand" value='{{device.brand}}'>
-	            <input type="hidden" placeholder="DeviceID" id="DeviceID" name="DeviceID" value='{{device.device_id}}'>
-	            <input type="hidden" placeholder="AppVersion" id="AppVersion" name="AppVersion" value='{{device.app_version}}'>
-                    Reason:
-                    <input type="text" placeholder="resolution" id="resolution" name="resolution" size=32 required>
-		    <!--<input type="button" onclick="myTest2(reason)" value="Submit" style="float: right;">-->
-		    <button type="submit" style="float: right;">Submit</button>
+                  <form action="resolve_device" method="POST">
+                    <input type="hidden" name="device_id" value='{{device.id}}'>
+                    <input type="text" placeholder="resolution" id="resolution" name="resolution" required>
+                    <button type="submit" onclick="return checkSubmit()">Submit</button>
                   </form>
                 </td>
+                {% endif %}
 	    </tr>
             {% endfor %}
 	</table>
     </ul>
 </div>
 
-<div class="form-popup" id="myForm">
-    <form action="testing" class="form-container">
-    <!-- 
-  	TODO: 
-  	  - NEED TO FIND A WAY TO GET THE JS VARIABLES TO BE USED IN THE FORM.
-  	  - NEED TO SUBMIT THE VARIABLES INCLUDING RESOLUTION TO THE DB.
-    -->
-        <label for="resolution"><b>Resolution:</b></label>
-        <input type="text" placeholder="Resolution" name="resolution" required>
-        
-        <button type="submit" class="btn" onclick="submit_form()">Submit</button>
-        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-    </form>
-</div>
+<script>
+function checkSubmit() {
+    return confirm("Resolve device?");
+}
+</script>
 
 {% endfor %}
 {% endblock %}
